<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".MainActivity">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:lines="2"
        android:maxLength="150"
        android:maxLines="5"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAddNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/black"
        android:text="@string/lbl_add_note"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/etNote" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnNoteHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/black"
        android:text="@string/lbl_note_history"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/btnAddNote" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHorizontalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblWordsCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_word_count"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEnd"
        app:layout_constraintTop_toBottomOf="@+id/etNote" />

    <TextView
        android:id="@+id/lblPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_priority"
        android:visibility="gone"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/lblWordsCount" />

    <Button
        android:id="@+id/btnLowPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/low"
        android:visibility="gone"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/lblPriority" />

    <Button
        android:id="@+id/btnMediumPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:visibility="gone"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/medium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintStart_toEndOf="@+id/btnLowPriority"
        app:layout_constraintTop_toBottomOf="@+id/lblPriority" />

    <Button
        android:id="@+id/btnHighPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        android:background="@android:color/holo_red_dark"
        android:text="@string/high"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintStart_toEndOf="@+id/btnMediumPriority"
        app:layout_constraintTop_toBottomOf="@+id/lblPriority" />


</android.support.constraint.ConstraintLayout>